<resources>
    <string name="app_name">Rynder</string>

    <!-- Splash Activity -->
    <string name="app_message">Your restaurant finder\n</string>
    <string name="splash_footer">Hecho con <b>amor</b></string>

    <!-- Login -->
    <string name="hint_name">Nombre de usuario</string>

    <string name="lbl_login_sesion">Iniciando Sesión</string>
    <string name="empty_data_message">Lleno los campos</string>
    <string name="lbl_btn_login">Iniciar Sesión</string>
    <string name="lbl_loading_message">Cargando</string>


    <!-- Maps -->
    <string name="google_maps_key">AIzaSyBHpBKuwXZe5yhN-W5vWT-Yz6evD_P19g0</string>

    <!--Menu -->
    <string name="lb_budget">Presupuesto</string>
    <string name="lb_logout">Cerrar sesión</string>

    <!-- Budget -->
    <string name="lbl_budget">Presupuesto</string>
    <string name="lbl_budget_description">Determina cuanto dinero puedes gastar</string>
    <string name="lbl_btn_search_options">Buscar opciones</string>
    <string name="lbl_min_budget">MX$100</string>
    <string name="lbl_max_budget">MX$1030</string>

    <!-- menu -->
    <string name="lbl_btn_view_menu">Ver menu</string>
    <string name="lbl_tx_menu">Menu</string>

</resources>
